--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Joseph Dale Bañares" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/src/img/eipify_thumbnail.jpg" />
+    <meta
+      name="description"
+      content="Look up your public IP along with its details."
+    />
+    <meta
+      property="og:description"
+      content="Look up your public IP along with its details."
+    />
+    <title>Eipify</title>
   </head>
   <body>
     <div id="root"></div>
